--- a/frontend/src/components/navbar.css
+++ b/frontend/src/components/navbar.css
@@ -1,6 +1,6 @@
 .navbar {
     width: 100%;
-    height: 75px;
+    /*height: 75px;*/
 
     position: fixed;
     top: 0;
@@ -11,6 +11,7 @@
     padding: 0 5vw;
 
     display: flex;
+		flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
 
@@ -35,4 +36,23 @@
     height: 64px;
     padding: 0;
     color: white;
+}
+
+@media (max-width: 750px) {
+	.navbar {
+    justify-content: center;
+	}
+}
+
+.navbar-item {
+	width: calc(var(--navbar) * 0.8);
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.icon-button {
+	max-width: 50px;
+	max-height: 50px;
+	border-radius: 50%;
 }
